change item management routes and document matrix by alphabetic order